--- a/05 - Flex Panel Gallery/index.html
+++ b/05 - Flex Panel Gallery/index.html
@@ -30,6 +30,7 @@
         .panels {
             min-height: 100vh;
             overflow: hidden;
+            display: flex;
         }
 
         .panel {
@@ -46,6 +47,10 @@
             font-size: 20px;
             background-size: cover;
             background-position: center;
+            flex: 1;
+            justify-content: center;
+            display: flex;
+            flex-direction: column;
         }
 
 
@@ -69,10 +74,32 @@
             background-image: url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500);
         }
 
+        /* Flex Items */
+
         .panel>* {
             margin: 0;
             width: 100%;
             transition: transform 0.5s;
+            flex: 1 0 auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .panel>*:first-child {
+            transform: translateY(-100%);
+        }
+
+        .panel.open-active>*:first-child {
+            transform: translateY(0);
+        }
+
+        .panel>*:last-child {
+            transform: translateY(100%);
+        }
+
+        .panel.open-active>*:last-child {
+            transform: translateY(0);
         }
 
         .panel p {
@@ -87,6 +114,7 @@
         }
 
         .panel.open {
+            flex: 5;
             font-size: 40px;
         }
     </style>
@@ -121,10 +149,22 @@
     </div>
 
     <script>
+        const panels = document.querySelectorAll('.panel');
 
+        function toggleOpen() {
+            this.classList.toggle('open');
+        }
+
+        function toggleActive(e) {
+            console.log(e.propertyName);
+            if (e.propertyName.includes('flex')) {
+                this.classList.toggle('open-active');
+            }
+        }
+
+        panels.forEach(panel => panel.addEventListener('click', toggleOpen));
+        panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
     </script>
-
-
 
 </body>
 
